# ha-garmin-fitness-coach-addon

./: .editorconfig  .gitattributes  .gitignore  .grype.yaml  .hadolint.yaml  .pre-commit-config.yaml  .yamllint  .zizmor.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  pyproject.toml  repository.json
.claude/: memory.md  settings.json
.claude/hooks/: block-secrets.cjs  stop-secret-audit.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.github/aw/: actions-lock.json
evals/: README.md  smoke_eval.py
garmincoach/: CHANGELOG.md  DOCS.md  Dockerfile  HA_AUTOMATIONS.md  TELEGRAM_SETUP.md  apparmor.txt  build.json  config.json
pulsecoach/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  HA_AUTOMATIONS.md  TELEGRAM_SETUP.md  apparmor.txt  build.json  config.json
scripts/: build-local.sh  check-app-ref.sh  collect_failures.py  generate-garmin-tokens.py  generate-gcal-token.py  ics_to_events.py  meeting_stress.py
tests/: README.md  __init__.py  conftest.py  test_coaching_engine.py  test_garmin_auth_multiuser.py  test_garmin_sync.py  test_ha_actions.py  test_ha_notify_data_quality.py  test_interactions.py  test_meeting_stress.py  test_metrics_compute.py
(+111 files in other folders)
